[package]
name = "exkeccak"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "exkeccak"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.36"
tiny-keccak = { version = "2.0", features = ["keccak"] }

[features]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
